Refatoração dos endpoints de usuários
