# src/controllers/categoriaController.js
@@ -1,9 +1,8 @@
-import  Categoria  from '../models/Categoria.js';
-import { gerarCorUnica } from '../utils/cores.js'
+import Categoria from '../models/Categoria.js';
+import { gerarCorUnica } from '../utils/cores.js';
 import { paginacao } from '../utils/paginacao.js';
 
 class CategoriaController {
-  
   static async criarCategoria(req, res) {
     try {
       const cor = await gerarCorUnica();
@@ -18,23 +17,25 @@ class CategoriaController {
     try {
       const { nome } = req.query;
       if (!nome) {
-        return res.status(400).json({ message: 'Parâmetros de busca inválido. Informe pelo menos um parâmetro.' });
+        return res
+          .status(400)
+          .json({ message: 'Parâmetros de busca inválido. Informe pelo menos um parâmetro.' });
       }
 
       const { pagina, limite, proximaPagina } = paginacao(req.query);
-      const filtro = { nome: { $regex: nome, $options: 'i' }};
+      const filtro = { nome: { $regex: nome, $options: 'i' } };
       const totalCategorias = await Categoria.countDocuments(filtro);
-      if(totalCategorias === 0) {
-        return res.status(404).json({ message: 'Nenhuma categoria encontrada.'});
+      if (totalCategorias === 0) {
+        return res.status(404).json({ message: 'Nenhuma categoria encontrada.' });
       }
       const totalPaginas = Math.ceil(totalCategorias / limite);
       if (pagina > totalPaginas) {
         return res.status(404).json({ message: 'Página não encontrada', totalPaginas });
       }
       const categorias = await Categoria.find(filtro)
-      .skip(proximaPagina)
-      .limit(limite)
-      .sort({ createdAt: -1 });
+        .skip(proximaPagina)
+        .limit(limite)
+        .sort({ createdAt: -1 });
 
       const infoPaginacao = {
         paginaAtual: pagina,
@@ -42,7 +43,7 @@ class CategoriaController {
         totalCategorias,
         paginaAnterior: pagina > 1 ? pagina - 1 : null,
         proximaPagina: pagina < totalPaginas ? pagina + 1 : null
-      }
+      };
       res.status(200).json({ categorias, infoPaginacao });
     } catch (erro) {
       res.status(500).json({ message: 'Erro ao buscar categoria', erro: erro.message });
@@ -59,9 +60,9 @@ class CategoriaController {
         return res.status(404).json({ message: 'Página não encontrada', totalCategorias });
       }
       const categorias = await Categoria.find()
-      .skip(proximaPagina)
-      .limit(limite)
-      .sort({ createdAt: -1 });
+        .skip(proximaPagina)
+        .limit(limite)
+        .sort({ createdAt: -1 });
 
       const infoPaginacao = {
         paginaAtual: pagina,
@@ -71,8 +72,8 @@ class CategoriaController {
         proximaPagina: pagina < totalPaginas ? pagina + 1 : null
       };
       res.status(200).json({ categorias, paginacao: infoPaginacao });
-      } catch (erro) {
-        res.status(500).json({ message: 'Erro ao listar categorias', erro: erro.message });
+    } catch (erro) {
+      res.status(500).json({ message: 'Erro ao listar categorias', erro: erro.message });
     }
   }
 
@@ -82,7 +83,7 @@ class CategoriaController {
       if (!listaCategoriasId) {
         return res.status(404).json({ message: 'Categoria não encontrada' });
       }
-      
+
       const { pagina, limite, proximaPagina } = paginacao(req.query);
       const filtro = { categoria: req.params.id };
 
@@ -92,10 +93,10 @@ class CategoriaController {
         return res.status(404).json({ message: 'Página não encontrada', totalPaginas });
       }
       const categorias = await Categoria.find(filtro)
-      .skip(proximaPagina)
-      .limit(limite)
-      .populate('categoria')
-      .sort({ createdAt: -1 });
+        .skip(proximaPagina)
+        .limit(limite)
+        .populate('categoria')
+        .sort({ createdAt: -1 });
 
       const infoPaginacao = {
         paginaAtual: pagina,
@@ -103,8 +104,8 @@ class CategoriaController {
         totalCategorias,
         paginaAnterior: pagina > 1 ? pagina - 1 : null,
         proximaPagina: pagina < totalPaginas ? pagina + 1 : null
-      }
-      res.status(200).json({ categorias, paginacao: infoPaginacao })
+      };
+      res.status(200).json({ categorias, paginacao: infoPaginacao });
     } catch (erro) {
       res.status(500).json({ message: 'Erro ao buscar categorias', erro: erro.message });
     }
@@ -112,7 +113,9 @@ class CategoriaController {
 
   static async atualizarCategoria(req, res) {
     try {
-      const atualizaCategoria = await Categoria.findByIdAndUpdate(req.params.id, req.body, {new: true});
+      const atualizaCategoria = await Categoria.findByIdAndUpdate(req.params.id, req.body, {
+        new: true
+      });
       if (!atualizaCategoria) {
         return res.status(404).json({ message: 'Categoria não encontarda' });
       }
@@ -128,11 +131,11 @@ class CategoriaController {
       if (!deletaCategoria) {
         return res.status(404).json({ message: 'Categoria não encontada' });
       }
-      res.status(200).json({ message: 'Categoria deletada com sucesso'});
+      res.status(200).json({ message: 'Categoria deletada com sucesso' });
     } catch (erro) {
       res.status(500).json({ message: 'Erro ao deletar categoria', erro: erro.message });
     }
   }
-};
+}
 
 export default CategoriaController;
